refactor(project): Remove liferay frontend
Signed-off-by: Helio Chissini de Castro <heliocastro@gmail.com>